# hive-city-rampage

./: .gitignore  BUILDING.md  CLAUDE.md  README.md  build.sh  hive_city_rampage.spec  pyproject.toml  run.sh
.github/workflows/: build-release.yml
src/p8/: game_template.p8  hive_city_rampage.p8
src/pyg/: ai.py  assets.py  constants.py  director.py  entities.py  hive_city_rampage.py  hive_city_rampage_backup.py  utils.py  world.py
src/pyg/assets/: convert_sprites.py  generate_advanced_terrain.py  generate_effects.py  generate_enemies.py  generate_props.py  generate_terrain.py  generate_terrain_v2.py  terrain_metadata.json
