[project]
name = "hive-city-rampage"
version = "0.1.0"
description = "A grim dark top-down shooter where you're humanity's last line of defense against endless xeno horrors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
